--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: devcampPortfolio_production
+  url: <%= ENV["REDISCLOUD_URL"] %>
+ 
